# GSM_Thermometer

./: CMakeLists.txt  README  generic-gcc-avr.cmake
additions/: Makefile  versions.txt
additions/WinAVR_patch/: patch
additions/sources/: 1_Wire_decoding_note.docx  gsm_modem.txt  main_brief.txt  manual.docx  manual.txt  menu.odg  scheme.spl7  sms_analysis.txt
src/: main.c
